<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelpRTQ</string>
    <string name="action_settings">Settings</string>
    <string name="compact">Compact DB</string>
    <string name="backup">Backup DB</string>
    <string name="restore">Restore DB</string>
    <string name="audit">Audit</string>
    <string name="nuovo">Nuovo</string>
    <string name="modifica">Modifica</string>
    <string name="elimina">Elimina</string>
    <string name="title_activity_nuovo_cliente">Nuovo cliente</string>
    <string name="cliente_nome">nome</string>
    <string name="cliente_indirizzo">indirizzo</string>
    <string name="cliente_telefono">telefono</string>
    <string name="salva_cliente">salva</string>
    <string name="title_activity_modifica_cliente">Modifica cliente</string>
    <string name="cliente_codice_organizzato">Codice organizzato</string>
    <string name="title_activity_audit">Audit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nuovo_audit">Nuovo audit</string>
    <string name="audit_data_mail">Data mail (gg/mm/aaaa)</string>
    <string name="salva_audit">Salva audit</string>
    <string name="nuovo_audit">Nuovo</string>
    <string name="modifica_audit">Modifica</string>
    <string name="elimina_audit">Elimina</string>
    <string name="title_activity_assessment">Assessment</string>
    <string name="title_activity_nuovo_assessment">Nuovo assessment</string>
    <string name="ass_data">Data (gg/mm/aaaa)</string>
    <string name="ass_RC">Rc</string>
    <string name="ass_RS">RS</string>
    <string name="salva_assessment">Salva assessment</string>
    <string name="ass_nuovo">Nuovo</string>
    <string name="ass_modifica">Modifica</string>
    <string name="ass_elimina">Elimina</string>
    <string name="assessment">Assessment</string>
    <string name="title_activity_pt">PT</string>
    <string name="title_activity_nuovo_pt">Nuovo PT</string>
    <string name="pt">PT</string>
    <string name="et_pt_data">Data (gg/mm/aaaa)</string>
    <string name="et_pt_esito">Esito</string>
    <string name="et_pt_discusso">Discusso</string>
    <string name="et_pt_correttivo">Correttivo</string>
    <string name="salva_pt">Salva PT</string>
    <string name="pt_nuovo">nuovo</string>
    <string name="pt_elimina">elimina</string>
    <string name="pt_modifica">modifica</string>
    <string name="title_activity_vettura">Vettura</string>
    <string name="title_activity_nuova_vettura">Nuova vettura</string>
    <string name="et_ve_telaio">telaio</string>
    <string name="salva_ve">Salva vettura</string>
    <string name="auto">Autovetture</string>
    <string name="ve_nuovo">nuovo</string>
    <string name="ve_elimina">elimina</string>
    <string name="ve_modifica">modifica</string>
    <string name="title_activity_visita">Visita</string>
    <string name="title_activity_nuova_visita">Nuova visita</string>
    <string name="visita_data">data</string>
    <string name="visita_diss">diss</string>
    <string name="visita_dissInfo">informazioni diss</string>
    <string name="visita_dissRichiestaTecnica">richiesta tenica diss</string>
    <string name="visita_attrezzatura">attrezzatura</string>
    <string name="visita_odlFatture">fatture odl</string>
    <string name="visita_formazione">formazione</string>
    <string name="visita_note">note</string>
    <string name="visita_salva">Salva visita</string>
    <string name="visita">Visita</string>
    <string name="visita_audi">Audi</string>
    <string name="visita_vw">VW</string>
    <string name="visita_skoda">Skoda</string>
    <string name="visita_seat">Seat</string>
    <string name="visita_vic">VIC</string>
    <string name="visita_vettura">Autovetture</string>
    <string name="visita_assessment">Assessment</string>
    <string name="visita_audit">Audit</string>
    <string name="visita_pt">PT</string>
        
</resources>
